COMP: Added CTest warning exception to avoid UserWarning: 'licence' distribution option is deprecated; use 'license'
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14355 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CTestCustom.cmake.in
+++ b/SuperBuild/CTestCustom.cmake.in
@@ -158,6 +158,7 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   "Modules.zlib.gzio"
   "Modules._ctypes.libffi_msvc.ffi.*warning C4018"
   "Modules._multiprocessing.*warning"
+  "dist.py.*UserWarning: 'licence' distribution option is deprecated; use 'license'"
   # Linux
   "Objects.unicodeobject.c.*warning:.*differ in signedness"
   "[Ii]nclude.(string|unicodeobject).h.*note: expected ‘const char *’ but argument is of type ‘unsigned char *’"
