ENH: Rename vtkMRMLDisplayableManagerFactory into vtkMRMLThreeDViewDisplayableManagerFactory
This is the first step related to the renaming of all classes currently
named vtkMRMLDisplayableManager into vtkMRMLThreeDViewDisplayableManager

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14356 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/MRMLDisplayableManager/CMakeLists.txt
+++ b/Libs/MRMLDisplayableManager/CMakeLists.txt
@@ -58,15 +58,17 @@ INSTALL(FILES
 # Sources
 
 SET(DisplayableManager_SRCS
+  # DisplayableManager associated with ThreeDView
   vtkMRMLCameraDisplayableManager.cxx
   vtkMRMLModelDisplayableManager.cxx
   vtkMRMLViewDisplayableManager.cxx
+  # DisplayableManager associated with SliceView
   )
 
 SET(KIT_SRCS
   ${DisplayableManager_SRCS}
   vtkMRMLAbstractDisplayableManager.cxx
-  vtkMRMLDisplayableManagerFactory.cxx
+  vtkMRMLThreeDViewDisplayableManagerFactory.cxx
   vtkMRMLDisplayableManagerGroup.cxx
   
   vtkSliceViewInteractorStyle.cxx
