ENH: Factored out code from vtkMRMLThreeDViewDisplayableManagerFactory into two classes
1) vtkMRMLDisplayableManagerFactory - implement the factory functionality

2) vtkMRMLThreeDViewDisplayableManagerFactory - singleton class inheriting from vtkMRMLDisplayableManagerFactory

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14362 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/MRMLDisplayableManager/CMakeLists.txt
+++ b/Libs/MRMLDisplayableManager/CMakeLists.txt
@@ -68,6 +68,7 @@ SET(DisplayableManager_SRCS
 SET(KIT_SRCS
   ${DisplayableManager_SRCS}
   vtkMRMLAbstractThreeDViewDisplayableManager.cxx
+  vtkMRMLDisplayableManagerFactory.cxx
   vtkMRMLThreeDViewDisplayableManagerFactory.cxx
   vtkMRMLThreeDViewDisplayableManagerGroup.cxx
   
