ENH: class vtkMRMLAbstractThreeDViewDisplayableManager now inherits from a base class vtkMRMLAbstractDisplayableManager
vtkThreeDViewMRMLDisplayableManagerGroup has been renamed into vtkMRMLDisplayableManagerGroup and its API updated:
- Set/GetMRMLViewNode has been generalized and renamed into Set/GetMRMLDisplayableNode

Similarly, vtkMRMLAbstractDisplayableManager provide two
protected methods: GetMRMLDisplayableNode and SetAndObserveMRMLDisplayableManager

GetMRMLDisplayableNode is used in vtkMRMLAbtractThreeDViewDisplayableManager within
the method GetMRMLViewNode

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14363 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/MRMLDisplayableManager/CMakeLists.txt
+++ b/Libs/MRMLDisplayableManager/CMakeLists.txt
@@ -58,19 +58,24 @@ INSTALL(FILES
 # Sources
 
 SET(DisplayableManager_SRCS
+
   # DisplayableManager associated with ThreeDView
   vtkMRMLCameraDisplayableManager.cxx
   vtkMRMLModelDisplayableManager.cxx
   vtkMRMLViewDisplayableManager.cxx
+
   # DisplayableManager associated with SliceView
   )
 
 SET(KIT_SRCS
   ${DisplayableManager_SRCS}
-  vtkMRMLAbstractThreeDViewDisplayableManager.cxx
+  vtkMRMLAbstractDisplayableManager.cxx
+  vtkMRMLDisplayableManagerGroup.cxx
   vtkMRMLDisplayableManagerFactory.cxx
+
+  # ThreeDView factory and DisplayableManager
+  vtkMRMLAbstractThreeDViewDisplayableManager.cxx
   vtkMRMLThreeDViewDisplayableManagerFactory.cxx
-  vtkMRMLThreeDViewDisplayableManagerGroup.cxx
   
   vtkSliceViewInteractorStyle.cxx
   vtkThreeDViewInteractorStyle.cxx
