ENH: Added vtkMRMLSliceViewDisplayableManagerFactory and vtkMRMLAbstractSliceViewDisplayableManager classes allowing to handle SliceView DisplayableManager
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14364 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/MRMLDisplayableManager/CMakeLists.txt
+++ b/Libs/MRMLDisplayableManager/CMakeLists.txt
@@ -76,6 +76,10 @@ SET(KIT_SRCS
   # ThreeDView factory and DisplayableManager
   vtkMRMLAbstractThreeDViewDisplayableManager.cxx
   vtkMRMLThreeDViewDisplayableManagerFactory.cxx
+
+  # SliceView factory and DisplayableManager
+  vtkMRMLAbstractSliceViewDisplayableManager.cxx
+  vtkMRMLSliceViewDisplayableManagerFactory.cxx
   
   vtkSliceViewInteractorStyle.cxx
   vtkThreeDViewInteractorStyle.cxx
