ENH: Split qSlicerAbstractModule in QTCore/qSlicerAbstractCoreModule,
In order to have QtGUI code in qSlicerAbstractModule, the class has to be
in Base/QTGUI, we rename qSlicerAbstractModule into
qSlicerAbstractCoreModule that only links with QtCore and we create a new
qSlicerAbstractModule in Bare/QTGUI. qSlicerAbstractModule contains an
icon (optionally reimplemented by all the modules), the allow the creation
of QAction directly from qSlicerAbstractModule and not by
qSlicerAbstractModuleWidget anymore. The problem with having createAction()
in qSlicerAbstractModuleWidget is that the module needed to create the
widget to be able to have QActions.(instanciate all the module widgets to
be able to have the module list in the toolbar which could slow down the
app, (a typical Slicer session doesn't need to instanciate all the module
widgets).

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14377 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCoreModules/CMakeLists.txt
+++ b/Base/QTCoreModules/CMakeLists.txt
@@ -14,8 +14,8 @@ SET(KIT_include_directories
 
 # Source files
 SET(KIT_SRCS
-  qSlicerAbstractCoreModule.cxx
-  qSlicerAbstractCoreModule.h
+  qSlicerCoreModule.cxx
+  qSlicerCoreModule.h
 
   qSlicerCoreModuleFactory.cxx
   qSlicerCoreModuleFactory.h
@@ -73,7 +73,7 @@ SET(KIT_SRCS
 
 # Headers that should run through moc
 SET(KIT_MOC_SRCS
-  qSlicerAbstractCoreModule.h
+  qSlicerCoreModule.h
 
   qSlicerCamerasModule.h
   qSlicerCamerasModuleWidget.h
