--- a/Base/QTGUI/Testing/CMakeLists.txt
+++ b/Base/QTGUI/Testing/CMakeLists.txt
@@ -1,7 +1,9 @@
 SET(KIT QTGUI)
 SET(CMAKE_TESTDRIVER_BEFORE_TESTMAIN "DEBUG_LEAKS_ENABLE_EXIT_ERROR();" )
 CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
+  qSlicerAbstractModuleTest1.cxx
   qSlicerAbstractModuleWidgetTest1.cxx
+  qSlicerLoadableModuleTest1.cxx
   qSlicerWidgetTest1.cxx
   qSlicerWidgetTest2.cxx
   EXTRA_INCLUDE TestingMacros.h
@@ -33,6 +35,8 @@ ENDMACRO( SIMPLE_TEST  )
 #   ${QTCore_TESTS} qSlicerCoreApplicationTest1
 #   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/SlicerQT )
 
+SIMPLE_TEST( qSlicerAbstractModuleTest1 )
 SIMPLE_TEST( qSlicerAbstractModuleWidgetTest1 )
+SIMPLE_TEST( qSlicerLoadableModuleTest1 )
 SIMPLE_TEST( qSlicerWidgetTest1 )
 SIMPLE_TEST( qSlicerWidgetTest2 )
