BUG:  Reverted linking back to shared library linking because of Windows errors.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14413 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/SlicerExecutionModel/GenerateCLP/CMakeLists.txt
+++ b/Libs/SlicerExecutionModel/GenerateCLP/CMakeLists.txt
@@ -32,7 +32,10 @@ add_executable(GenerateCLP ${GENERATECLP_SOURCE})
 get_target_property(GenerateCLP_EXE_PATH GenerateCLP LOCATION)
 
 target_link_libraries(GenerateCLP
-  ModuleDescriptionParser-static
+  # Appearently windows does not like static libs mixed with shared libs ModuleDescriptionParser-static
+  # A different solution will have to be investigated for makeing GenerateCLP work without
+  # shared libs.
+  ModuleDescriptionParser
   itksys
   ITKEXPAT)
 
