ENH: Add qSlicerMouseModeToolBarPlugin
not very useful but why not...

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14431 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTGUI/Plugins/CMakeLists.txt
+++ b/Base/QTGUI/Plugins/CMakeLists.txt
@@ -14,6 +14,8 @@ SET(designer_plugin_SRCS
   qSlicerWidgetPlugin.h
   qSlicerModulePanelPlugin.cxx
   qSlicerModulePanelPlugin.h
+  qSlicerMouseModeToolBarPlugin.cxx
+  qSlicerMouseModeToolBarPlugin.h
   )
 
 # Headers that should run through moc
