BUG:  More static library linkage is still causing windows build errors.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14491 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/SlicerExecutionModel/ModuleDescriptionParser/Testing/CMakeLists.txt
+++ b/Libs/SlicerExecutionModel/ModuleDescriptionParser/Testing/CMakeLists.txt
@@ -9,11 +9,11 @@ MARK_AS_ADVANCED(CMAKE_BACKWARDS_COMPATIBILITY)
 
 set(PARSER1TEST_SOURCE Parser1Test )
 add_executable(Parser1Test ${PARSER1TEST_SOURCE})
-target_link_libraries(Parser1Test ModuleDescriptionParser-static )
+target_link_libraries(Parser1Test ModuleDescriptionParser )
 
 set(ModuleFactoryTest_SOURCE ModuleFactoryTest )
 add_executable(ModuleFactoryTest ${ModuleFactoryTest_SOURCE})
-target_link_libraries(ModuleFactoryTest ModuleDescriptionParser-static )
+target_link_libraries(ModuleFactoryTest ModuleDescriptionParser )
 
 include_directories(
   ${ModuleDescriptionParser_SOURCE_DIR}
