BUG: Eliminate the attempt to simultaneously build statis and dynamic versions of the lib
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14492 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/SlicerExecutionModel/ModuleDescriptionParser/CMakeLists.txt
+++ b/Libs/SlicerExecutionModel/ModuleDescriptionParser/CMakeLists.txt
@@ -106,9 +106,9 @@ set(lib_name ModuleDescriptionParser)
 ## Always build an explicitly static library for linking against GenerateCLP so that
 ## GenerateCLP can be run from CMake without having to set DYLD_LIBRARY_PATH or LD_LIBRARY_PATH
 ## to the future location of of libModuleDescriptionParser.so
-add_library(${lib_name}-static STATIC
-  ${ModuleDescriptionParser_SRCS}
-  )
+## add_library(${lib_name}-static STATIC
+  ## ${ModuleDescriptionParser_SRCS}
+  ## )
 
 set(link_libs
   ITKEXPAT
@@ -128,7 +128,7 @@ if(NOT WIN32 AND HAVE_BFD)
 endif(NOT WIN32 AND HAVE_BFD)
 
 target_link_libraries(${lib_name} ${link_libs})
-target_link_libraries(${lib_name}-static ${link_libs})
+## target_link_libraries(${lib_name}-static ${link_libs})
 
 # Apply user-defined properties to the library target.
 IF(Slicer3_LIBRARY_PROPERTIES)
