ENH: Added more functionality to be able to place other types of annotations. Work in progress.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14501 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Annotation/CMakeLists.txt
+++ b/QTModules/Annotation/CMakeLists.txt
@@ -16,6 +16,7 @@ SET(qt_module_include_directories
 SET(DisplayableManager_SRCS
   vtkMRMLAnnotationTextDisplayableManager.cxx
   vtkMRMLAnnotationFiducialDisplayableManager.cxx
+  vtkMRMLAnnotationAngleDisplayableManager.cxx
   )
 
 # Create the instantiator for DisplayableManager classes.
@@ -59,6 +60,8 @@ SET(qt_module_SRCS
   vtkSlicerAnnotationSplineManager.h
   vtkSlicerAnnotationBidimensionalManager.cxx
   vtkSlicerAnnotationBidimensionalManager.h
+  vtkMRMLAnnotationClickCounter.cxx
+  vtkMRMLAnnotationClickCounter.h
   )
 
 SET(MODULE_WIDGETS_SRCS
