ENH: Add qMRMLCollapsibleButton, a ctkCollapsibleButton that darkens when
contained by other ctkCollapsibleButton

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14511 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Plugins/CMakeLists.txt
+++ b/Libs/qMRMLWidgets/Plugins/CMakeLists.txt
@@ -6,6 +6,8 @@ PROJECT(qMRMLWidgetsPlugin)
 
 # Source files
 SET(designer_plugin_SRCS
+  qMRMLCollapsibleButtonPlugin.cxx
+  qMRMLCollapsibleButtonPlugin.h
   qMRMLColorTableComboBoxPlugin.cxx
   qMRMLColorTableComboBoxPlugin.h
   qMRMLLinearTransformSliderPlugin.cxx
@@ -54,6 +56,7 @@ SET(designer_plugin_SRCS
 SET(designer_plugin_MOC_SRCS
   qMRMLWidgetsPlugin.h
 
+  qMRMLCollapsibleButtonPlugin.h
   qMRMLColorTableComboBoxPlugin.h
   qMRMLLinearTransformSliderPlugin.h
   qMRMLListWidgetPlugin.h
