COMP: Add QT dependency for the plugin qSlicerIconEnginePlugin
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14517 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTGUI/CMakeLists.txt
+++ b/Base/QTGUI/CMakeLists.txt
@@ -160,6 +160,7 @@ ADD_LIBRARY(qSlicerIconEnginePlugin
   ${MOC_qSlicerIconEnginePlugin})
 
 TARGET_LINK_LIBRARIES(qSlicerIconEnginePlugin
+  ${QT_LIBRARIES}
   ${CTK_LIBRARIES})
 
 SET_TARGET_PROPERTIES(qSlicerIconEnginePlugin
