COMP: support python wrapping for MRMLLogic
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14522 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/MRMLLogic/CMakeLists.txt
+++ b/Libs/MRMLLogic/CMakeLists.txt
@@ -69,10 +69,12 @@ SET(MRMLLogic_SRCS
   vtkImageResliceMask.cxx
   )
   
+# set hints for tcl and python
+SET(VTK_WRAP_HINTS ${CMAKE_CURRENT_SOURCE_DIR}/Wrapping/Tcl/hints)
+
 # TCL Wrapping
 if (VTK_WRAP_TCL)
    include("${VTK_CMAKE_DIR}/vtkWrapTcl.cmake")
-   SET(VTK_WRAP_HINTS ${CMAKE_CURRENT_SOURCE_DIR}/Wrapping/Tcl/hints)
    vtk_wrap_tcl3(MRMLLogic  MRMLLogic_TCL_SRCS   "${MRMLLogic_SRCS}" "")
 endif()
 
