COMP: enable mrmllogic and tpycl access
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14524 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/Python/CMakeLists.txt
+++ b/Base/Python/CMakeLists.txt
@@ -9,11 +9,18 @@ SET(Slicer_PYTHON_FILES
   slicer/__init__
   slicer/logic
   slicer/mrml
+  slicer/mrmlLogic
   slicer/teem
   slicer/freesurfer
   slicer/remoteio
   slicer/slicerqt
   slicer/vtk/__init__
+  tpycl/__init__
+  tpycl/tpycl
+  )
+
+SET(Slicer_PYTHON_RESOURCES
+  tpycl/tpycl.tcl
   )
 
 SET(copied_python_files)
@@ -28,6 +35,16 @@ FOREACH(file ${Slicer_PYTHON_FILES})
                       COMMAND ${CMAKE_COMMAND} -E copy ${src} ${tgt}
                       OUTPUT ${tgt}
                       COMMENT "source copy")
+ENDFOREACH(file)
+
+FOREACH(file ${Slicer_PYTHON_RESOURCES})
+  SET(src "${CMAKE_CURRENT_SOURCE_DIR}/${file}")
+  SET(tgt "${Slicer_PYTHON_MODULE_BINARY_DIR}/${file}")
+  SET(copied_python_files ${copied_python_files} ${tgt})
+  ADD_CUSTOM_COMMAND(DEPENDS ${src}
+                      COMMAND ${CMAKE_COMMAND} -E copy ${src} ${tgt}
+                      OUTPUT ${tgt}
+                      COMMENT "resource copy")
 ENDFOREACH(file)
 
 ADD_CUSTOM_TARGET(CopyPythonFiles
@@ -57,3 +74,9 @@ INSTALL(DIRECTORY "${Slicer3_BINARY_DIR}/bin/Python"
   DESTINATION "${Slicer3_INSTALL_BIN_DIR}" COMPONENT Runtime
   USE_SOURCE_PERMISSIONS)
 
+#-----------------------------------------------------------------------------
+# Testing
+#
+if(Slicer3_BUILD_TESTING)
+  add_subdirectory(tpycl/Testing)
+endif(Slicer3_BUILD_TESTING)
