--- a/SuperBuild/python_install_step.cmake.in
+++ b/SuperBuild/python_install_step.cmake.in
@@ -4,4 +4,9 @@ if(UNIX)
     COMMAND make install
     WORKING_DIRECTORY "@python_base@"
     )
+  EXECUTE_PROCESS( 
+    COMMAND @CMAKE_CURRENT_BINARY_DIR@/python-build/bin/python setup.py install 
+    WORKING_DIRECTORY "@python_base@"
+    RESULT_VARIABLE rv
+    )
 endif()
