ENH: PythonQt wrapping - CTK is now configured with CTK_WRAP_PYTHONQT_LIGHT:ON
The macro ctkMacroWrapPythonQt is also included in the main CMakeLists.txt

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14537 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -269,6 +269,12 @@ if (Slicer3_USE_QT)
   FIND_PACKAGE(CTK REQUIRED)
   IF(CTK_FOUND)
     INCLUDE(${CTK_USE_FILE})
+    # Update CMake module path
+    SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CTK_CMAKE_UTILITIES_DIR})
+    IF(Slicer3_USE_PYTHONQT)
+      SET(PYTHONQT_INSTALL_DIR ${CTK_PYTHONQT_INSTALL_DIR})
+      INCLUDE(${CTK_CMAKE_DIR}/ctkMacroWrapPythonQt.cmake)
+    ENDIF()
   ENDIF()
 ENDIF()
 
