ENH: PythonQt wrapping - qMRMLWidgets library is now wrapped
A static library named qMRMLWidgetsPythonQt is created

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14538 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/CMakeLists.txt
+++ b/Libs/qMRMLWidgets/CMakeLists.txt
@@ -230,6 +230,19 @@ ENDIF(Slicer3_LIBRARY_PROPERTIES)
 
 
 # --------------------------------------------------------------------------
+# PythonQt wrapping
+#
+IF(qMRMLWidgets_WRAP_PYTHON)
+  ctkMacroWrapPythonQt("org.slicer.libs" ${lib_name}
+    KIT_PYTHONQT_SRCS "${qMRMLWidgets_SRCS}" FALSE)
+  ADD_LIBRARY(${lib_name}PythonQt STATIC ${KIT_PYTHONQT_SRCS})
+  TARGET_LINK_LIBRARIES(${lib_name}PythonQt ${lib_name})
+  IF(CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
+    SET_TARGET_PROPERTIES(${lib_name}PythonQt PROPERTIES COMPILE_FLAGS "-fPIC")
+  ENDIF()
+ENDIF()
+
+# --------------------------------------------------------------------------
 # Install
 #
 
