ENH: PythonQt wrapping - qSlicerPythonManager now initialize CTKWidget, CTKVisualizationVTKWidgets and qMRMLWidgets wrappers
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14539 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTGUI/CMakeLists.txt
+++ b/Base/QTGUI/CMakeLists.txt
@@ -117,6 +117,9 @@ SET(KIT_target_libraries
 IF(Slicer3_USE_PYTHONQT)
   LIST(APPEND KIT_target_libraries
     CTKScriptingPythonWidgets
+    CTKWidgetsPythonQt
+    CTKVisualizationVTKWidgetsPythonQt
+    qMRMLWidgetsPythonQt
     )
 ENDIF()
 
