STYLE: Reorganize header alphabetically in Application/SlicerQT/CMakeLists.txt
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14542 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/SlicerQT/CMakeLists.txt
+++ b/Applications/SlicerQT/CMakeLists.txt
@@ -182,13 +182,14 @@ ENDIF(SlicerQT_NEED_SHARED_FORWARD)
 # Sources
 #
 SET(SlicerQT_SRCS
-  qSlicerAboutDialog.h
   qSlicerAboutDialog.cxx
+  qSlicerAboutDialog.h
 
-  qSlicerMainWindow.h
   qSlicerMainWindow.cxx
-  qSlicerMainWindowCore.h
+  qSlicerMainWindow.h
   qSlicerMainWindowCore.cxx
+  qSlicerMainWindowCore.h
+  qSlicerMainWindowCore_p.h
   )
 
 SET(SlicerQT_MOC_SRCS
