ENH: PythonManager - Added function addVTKObjectToPythonMain and removed function addVTKSlicerObject/addVTKObject
The method vtkPythonGetObjectFromPointer provided by vtkPythonUtils is now
used to add a vtkObject to a module.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14544 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCore/CMakeLists.txt
+++ b/Base/QTCore/CMakeLists.txt
@@ -73,6 +73,7 @@ ENDIF(Slicer3_USE_PYTHONQT)
 SET(KIT_target_libraries
   ModuleDescriptionParser
   SlicerBaseLogic
+  vtkCommonPythonD # For vtkPythonUtils
   FreeSurfer # for qSlicerXcedeCatalogIO
   CTKCore
   CTKVisualizationVTKCore
