COMP: Superbuild - Added advanced option Slicer3_USE_PYTHONQT_WITH_TCL
Waiting the TCL adapter layer is fully functional (see below), the Slicer3_USE_PYTHONQT_WITH_TCL
option is OFF and remains (for now) an advanced feature.

See http://www.cdash.org/CDash/index.php?project=Slicer3&date=2010-08-11
Dashboard are still complaining :(

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14551 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/Python/CMakeLists.txt
+++ b/Base/Python/CMakeLists.txt
@@ -15,13 +15,20 @@ SET(Slicer_PYTHON_FILES
   slicer/remoteio
   slicer/slicerqt
   slicer/vtk/__init__
-  tpycl/__init__
-  tpycl/tpycl
   )
 
 SET(Slicer_PYTHON_RESOURCES
-  tpycl/tpycl.tcl
   )
+  
+IF(Slicer3_USE_PYTHONQT_WITH_TCL)
+  LIST(APPEND Slicer_PYTHON_FILES 
+    tpycl/__init__
+    tpycl/tpycl
+    )
+  LIST(APPEND Slicer_PYTHON_RESOURCES
+    tpycl/tpycl.tcl
+    )
+ENDIF()
 
 SET(copied_python_files)
 
@@ -78,5 +85,7 @@ INSTALL(DIRECTORY "${Slicer3_BINARY_DIR}/bin/Python"
 # Testing
 #
 if(Slicer3_BUILD_TESTING)
-  add_subdirectory(tpycl/Testing)
+  IF(Slicer3_USE_PYTHONQT_WITH_TCL)
+    add_subdirectory(tpycl/Testing)
+  ENDIF()
 endif(Slicer3_BUILD_TESTING)
