--- a/vtkSlicerConfigure.h.in
+++ b/vtkSlicerConfigure.h.in
@@ -26,6 +26,7 @@
 #cmakedefine Slicer3_USE_NUMPY
 #cmakedefine Slicer3_USE_PYTHON
 #cmakedefine Slicer3_USE_PYTHONQT
+#cmakedefine Slicer3_USE_PYTHONQT_WITH_TCL
 #cmakedefine Slicer3_USE_OPENTRACKER
 #cmakedefine Slicer3_USE_QT
 #cmakedefine Slicer3_USE_KWWIDGETS
